# LearnCPP

./: CMakeLists.txt  main.cpp
entities/: Entity.cpp  Entity.h  Player.cpp  Player.h
